# aws-py

./: README.md  pyproject.toml
task_1/: main.py
task_1/bucket/: policy.py
