[tool.poetry]
name = "task-1"
version = "0.1.0"
description = ""
authors = ["Beka Chkhaidze <beka.chkhaidze83@pm.me>"]
readme = "README.md"
packages = [{include = "task_1"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
boto3 = "^1.26.108"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
